_archive/devops/kubernetes/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: tiranafly
spec:
  replicas: 4
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: worker
        image: tiranafly/worker:latest
        resources:
          limits:
            cpu: "1"
            memory: "1Gi"
          requests:
            cpu: "250m"
            memory: "512Mi"
